Version 2.1.201
    Portuguese translation of Woodcutting changed back to Lenhador

Version 2.1.200
    Fixed a major 1.17 exploit
    Dodge will no longer trigger while blocking
    Action Bar messages can now be disabled (thanks TheBusyBiscuit)
    mcMMO is better at MC version parsing now (thanks stepech & TheBusyBiscuit)

Version 2.1.199
    Fixed IndexOutOfBounds error for servers running 1.17 or higher
    Fixed a bug that caused MySQL/MariaDB to malfunction for 1.17 (see notes)
    Renamed Deepslate Lapis Lazuli Ore to Deepslate Lapis Ore in experience.yml and config.yml
    Added some code to prevent mcMMO from breaking if it doesn't recognize the version of the game
    Optimized CompatibilitySupportLayer - this handles some of the logic for supporting multiple versions of the game
    Added Unit Tests for MinecraftGameVersion

    NOTES:
    I have temporarily disabled SSL for MySQL/MariaDB for 1.17 ( proper fix coming soon )

Version 2.1.198
    Fixed a bug where Smelting didn't work with the new 1.17 materials
    Updated dependency Adventure to 4.8.0 (thanks TheBusyBiscuit)

Version 2.1.197
    This update adds compatibility for new mobs and blocks from 1.17
    This build of mcMMO should be more compatible with certain versions of ViaVersion
    Players are no longer launched from Minecarts when using a Fishing Rod (they are still dismounted) thanks lexikiq
    Updated Japanese locale (thanks ViaSnake)
    Updated Brazil Portuguese (pt_BR) locale (thanks Paulo Guilherme)
    Added Goat to experience.yml for combat and taming
    Added Axolotl to experience.yml for combat and taming
    Added Glow_Squid to experience.yml for combat and taming
    Added Glow Berries to Farmer's Diet
    Updated Super Breaker to recognize the new pick-axe appropriate blocks
    Updated Tree Feller to recognize Azalea Leaves

    Added Rooted Dirt to experience.yml for Excavation
    Added Small Dripleaf to experience.yml for Herbalism